PR/44131: Matthew Mondor: if_tap.c tap_dev_ioctl() not propagating error, always returns 0.